...
                android:layout_alignParentRight="true"
                android:text="239 KB"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/sbFileSizeMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="5dp"/>

        <SeekBar
            android:id="@+id/sbFileSizeMax"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
...
