...
    <string name="confirm_delete_identity_header">Delete identity?</string>
    <string name="confirm_delete_identity_message">Do you really want to delete the identity %s? This action cannot be undone!</string>
    <string name="add_folder_header">Create folder</string>
    <string name="add_folder_name">Enter folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="headline_searchresult">Search result:</string>
    <string name="headline_files">File browser</string>
    <string name="filter">Filter</string>
    <string name="no_entrys_found">No files were found</string>
    <string name="ab_filesearch_hint">Enter a keyword</string>

    <string name="headline_add_contact">Add contact</string>
    <string name="headline_add_identity">Add identity</string>
    <string name="headline_contacts">Contacts</string>
    <string name="headline_identities">Identities</string>
    <string name="headline_select_upload_folder">Select upload folder</string>
...
